# dgsw-investment-server

./: .gitignore  docker-compose.yml  init-poetry.sh  pyproject.toml
auth-server/: alembic.ini  main.py  pyproject.toml
auth-server/alembic/: env.py
auth-server/alembic/versions/: ccaece4d8b78_create_user_tables.py  d6dc4a312e44_create_user_tables.py  f43eceb0b1b4_initial_migration.py
auth-server/auth_clients/: dodam_client.py  user_internal_api_client.py
auth-server/auth_config/: setting.py
auth-server/auth_depends/: auth_depends.py  internal_auth_middleware.py
auth-server/auth_mapper/: UserMapper.py
auth-server/auth_models/: user_credentials.py
auth-server/auth_repositories/: user_credentials_repository.py
auth-server/auth_routers/: auth_external_router.py  auth_internal_router.py  auth_router.py
auth-server/auth_schemas/: auth_request_schema.py  auth_response_schema.py  dauth_schema.py  user.py
auth-server/auth_services/: auth_service.py  jwt_service.py
auth-server/auth_utils/: ParameterExtractor.py
common/: base_response.py  pyproject.toml
config/: settings.py
news/: models.py
price-engine-server/: main.py  pyproject.toml
price-engine-server/pe_clients/: redis_client.py
price-engine-server/pe_config/: setting.py
price-engine-server/pe_service/: match_consumer.py
price-engine-server/pe_util/: uuid_util.py
rest-api-server/: main.py  pyproject.toml
rest-api-server/rest_clients/: redis_client.py
rest-api-server/rest_config/: db_session.py  (+2 more)
stocks/: models.py
users/: models.py
websocket-server/: main.py  pyproject.toml
(+45 files in other folders)
